add carousel and images. Stylize the page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,37 @@
 .daytona , .cabo, .sanDiego, .baja{
   display: none;
 }
+
+.bottom{
+  position:fixed;
+  height:50px;
+  bottom:15px;
+  left:0px;
+  right:0px;
+  text-indent: 15px;
+  margin-bottom:0px;
+  border-top-width: 3px;
+  border-top-style: solid;
+  border-top-color: black;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 325px;
+  width: auto;
+}
+body{
+  background-color: #e5ffff;
+}
+
+.btn-center{
+  position: relative;
+  margin: auto;
+  text-align: center;
+}
+.carousel-inner > .item > img{
+       width: auto;
+       height:325px;
+     }
