--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,6 @@
   right:0px;
   text-indent: 15px;
   margin-bottom:0px;
-  border-top-width: 3px;
-  border-top-style: solid;
-  border-top-color: black;
 }
 
 img{
@@ -24,12 +21,21 @@ img{
 }
 body{
   background-color: #e5ffff;
+  margin-bottom: 30px;
+  padding-bottom: 100px;
+  margin-left: 35px;
+  margin-right: 35px;
+}
+
+.top{
+  text-align: center;
 }
 
 .btn-center{
   position: relative;
   margin: auto;
   text-align: center;
+  margin-top: 10px;
 }
 .carousel-inner > .item > img{
        width: auto;
